deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: posts.com
  - http:
      paths:
      - path: /s1

        pathType: Prefix
        backend:
          service:
            name: s1-srv
            port:
              number: 3010
      - path: /s2
        pathType: Prefix
        backend:
          service:
            name: s2-srv
            port:
              number: 3020
